# hackathon2025

./: .gitignore  README.md  SUPPORT.md  azure.yaml  next-steps.md  pyproject.toml  requirements-dev.txt
src/: .dockerignore  .env.sample  Dockerfile  gunicorn.conf.py  logging_config.py  pyproject.toml  requirements.txt
src/api/: config_helper.py  main.py  routes.py  search_index_manager.py  shared.py
src/api/data/: embeddings.csv
src/api/static/: ChatClient.js  ChatUI.js  main.js  styles.css
src/api/templates/: index.html  index_react.html
src/data/: embeddings.csv
src/files/: product_info_3.md
src/frontend/: package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js  vite.config.ts
src/frontend/src/: main.jsx  main.tsx
src/frontend/src/components/: App.jsx  App.tsx  ChatContainer.jsx  ChatForm.jsx  Message.jsx  MessageList.jsx
src/frontend/src/components/agents/: AgentIcon.module.css  AgentIcon.tsx  AgentPreview.module.css  AgentPreview.tsx  AgentPreviewChatBot.module.css  AgentPreviewChatBot.tsx  AssistantMessage.module.css  AssistantMessage.tsx  BuiltWithBadge.module.css  BuiltWithBadge.tsx  StarterMessages.module.css  StarterMessages.tsx  UsageInfo.module.css  UsageInfo.tsx  UserMessage.module.css  UserMessage.tsx  Waves.tsx
src/frontend/src/components/core/: Markdown.module.css  Markdown.tsx  SettingsPanel.module.css  SettingsPanel.tsx  ThinkBlock.module.css  ThinkBlock.tsx
src/frontend/src/types/: chat.ts
src/quartapp/: __init__.py  chat.py
src/quartapp/static/: ChatClient.js  ChatUI.js
src/quartapp/templates/: index.html
(+62 files in other folders)
